// Vitest Snapshot v1

exports[`generate components.d.ts 1`] = `
"/* generated by unplugin-react-components */
export {}
declare global{
	const A: typeof import('./A')['A']
	const App: typeof import('./App')['App']
	const AntAffix: typeof import('antd')['Affix']
	const AntAlert: typeof import('antd')['Alert']
	const AntAnchor: typeof import('antd')['Anchor']
	const AntAutoComplete: typeof import('antd')['AutoComplete']
	const AntAvatar: typeof import('antd')['Avatar']
	const AntBackTop: typeof import('antd')['BackTop']
	const AntBadge: typeof import('antd')['Badge']
	const AntBreadcrumb: typeof import('antd')['Breadcrumb']
	const AntButton: typeof import('antd')['Button']
	const AntCalendar: typeof import('antd')['Calendar']
	const AntCard: typeof import('antd')['Card']
	const AntCarousel: typeof import('antd')['Carousel']
	const AntCascader: typeof import('antd')['Cascader']
	const AntCheckbox: typeof import('antd')['Checkbox']
	const AntCol: typeof import('antd')['Col']
	const AntCollapse: typeof import('antd')['Collapse']
	const AntComment: typeof import('antd')['Comment']
	const AntConfigProvider: typeof import('antd')['ConfigProvider']
	const AntDatePicker: typeof import('antd')['DatePicker']
	const AntDescriptions: typeof import('antd')['Descriptions']
	const AntDivider: typeof import('antd')['Divider']
	const AntDrawer: typeof import('antd')['Drawer']
	const AntDropdown: typeof import('antd')['Dropdown']
	const AntEmpty: typeof import('antd')['Empty']
	const AntForm: typeof import('antd')['Form']
	const AntGrid: typeof import('antd')['Grid']
	const AntImage: typeof import('antd')['Image']
	const AntInput: typeof import('antd')['Input']
	const AntInputNumber: typeof import('antd')['InputNumber']
	const AntLayout: typeof import('antd')['Layout']
	const AntList: typeof import('antd')['List']
	const AntMentions: typeof import('antd')['Mentions']
	const AntMenu: typeof import('antd')['Menu']
	const AntModal: typeof import('antd')['Modal']
	const AntPageHeader: typeof import('antd')['PageHeader']
	const AntPagination: typeof import('antd')['Pagination']
	const AntPopconfirm: typeof import('antd')['Popconfirm']
	const AntPopover: typeof import('antd')['Popover']
	const AntProgress: typeof import('antd')['Progress']
	const AntRadio: typeof import('antd')['Radio']
	const AntRate: typeof import('antd')['Rate']
	const AntResult: typeof import('antd')['Result']
	const AntRow: typeof import('antd')['Row']
	const AntSegmented: typeof import('antd')['Segmented']
	const AntSelect: typeof import('antd')['Select']
	const AntSkeleton: typeof import('antd')['Skeleton']
	const AntSlider: typeof import('antd')['Slider']
	const AntSpace: typeof import('antd')['Space']
	const AntSpin: typeof import('antd')['Spin']
	const AntStatistic: typeof import('antd')['Statistic']
	const AntSteps: typeof import('antd')['Steps']
	const AntSwitch: typeof import('antd')['Switch']
	const AntTable: typeof import('antd')['Table']
	const AntTabs: typeof import('antd')['Tabs']
	const AntTag: typeof import('antd')['Tag']
	const AntTimePicker: typeof import('antd')['TimePicker']
	const AntTimeline: typeof import('antd')['Timeline']
	const AntTooltip: typeof import('antd')['Tooltip']
	const AntTransfer: typeof import('antd')['Transfer']
	const AntTree: typeof import('antd')['Tree']
	const AntTreeSelect: typeof import('antd')['TreeSelect']
	const AntTypography: typeof import('antd')['Typography']
	const AntUpload: typeof import('antd')['Upload']
	const AntAffix: typeof import('antd')['Affix']
	const AntAlert: typeof import('antd')['Alert']
	const AntAnchor: typeof import('antd')['Anchor']
	const AntAutoComplete: typeof import('antd')['AutoComplete']
	const AntAvatar: typeof import('antd')['Avatar']
	const AntBackTop: typeof import('antd')['BackTop']
	const AntBadge: typeof import('antd')['Badge']
	const AntBreadcrumb: typeof import('antd')['Breadcrumb']
	const AntButton: typeof import('antd')['Button']
	const AntCalendar: typeof import('antd')['Calendar']
	const AntCard: typeof import('antd')['Card']
	const AntCarousel: typeof import('antd')['Carousel']
	const AntCascader: typeof import('antd')['Cascader']
	const AntCheckbox: typeof import('antd')['Checkbox']
	const AntCol: typeof import('antd')['Col']
	const AntCollapse: typeof import('antd')['Collapse']
	const AntComment: typeof import('antd')['Comment']
	const AntConfigProvider: typeof import('antd')['ConfigProvider']
	const AntDatePicker: typeof import('antd')['DatePicker']
	const AntDescriptions: typeof import('antd')['Descriptions']
	const AntDivider: typeof import('antd')['Divider']
	const AntDrawer: typeof import('antd')['Drawer']
	const AntDropdown: typeof import('antd')['Dropdown']
	const AntEmpty: typeof import('antd')['Empty']
	const AntForm: typeof import('antd')['Form']
	const AntGrid: typeof import('antd')['Grid']
	const AntImage: typeof import('antd')['Image']
	const AntInput: typeof import('antd')['Input']
	const AntInputNumber: typeof import('antd')['InputNumber']
	const AntLayout: typeof import('antd')['Layout']
	const AntList: typeof import('antd')['List']
	const AntMentions: typeof import('antd')['Mentions']
	const AntMenu: typeof import('antd')['Menu']
	const AntModal: typeof import('antd')['Modal']
	const AntPageHeader: typeof import('antd')['PageHeader']
	const AntPagination: typeof import('antd')['Pagination']
	const AntPopconfirm: typeof import('antd')['Popconfirm']
	const AntPopover: typeof import('antd')['Popover']
	const AntProgress: typeof import('antd')['Progress']
	const AntRadio: typeof import('antd')['Radio']
	const AntRate: typeof import('antd')['Rate']
	const AntResult: typeof import('antd')['Result']
	const AntRow: typeof import('antd')['Row']
	const AntSegmented: typeof import('antd')['Segmented']
	const AntSelect: typeof import('antd')['Select']
	const AntSkeleton: typeof import('antd')['Skeleton']
	const AntSlider: typeof import('antd')['Slider']
	const AntSpace: typeof import('antd')['Space']
	const AntSpin: typeof import('antd')['Spin']
	const AntStatistic: typeof import('antd')['Statistic']
	const AntSteps: typeof import('antd')['Steps']
	const AntSwitch: typeof import('antd')['Switch']
	const AntTable: typeof import('antd')['Table']
	const AntTabs: typeof import('antd')['Tabs']
	const AntTag: typeof import('antd')['Tag']
	const AntTimePicker: typeof import('antd')['TimePicker']
	const AntTimeline: typeof import('antd')['Timeline']
	const AntTooltip: typeof import('antd')['Tooltip']
	const AntTransfer: typeof import('antd')['Transfer']
	const AntTree: typeof import('antd')['Tree']
	const AntTreeSelect: typeof import('antd')['TreeSelect']
	const AntTypography: typeof import('antd')['Typography']
	const AntUpload: typeof import('antd')['Upload']
}"
`;

exports[`ignore local components 1`] = `
"import { Progress as _unplugin_react_Progress_0 } from 'antd'
import { Tooltip as _unplugin_react_Tooltip_1 } from 'antd'

  import { jsxDEV as _jsxDEV } from \\"react/jsx-dev-runtime\\";
  function App() {
    return /*#__PURE__*/_jsxDEV(\\"div\\", {
      className: \\"App\\",
      children: [/*#__PURE__*/_jsxDEV(A, {
        variant: 'contained',
        children: \\"hi mui\\"
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 6,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_Progress_0, {
        percent: 30
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 7,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(A, {}, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 8,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_Tooltip_1, {
        title: \\"prompt text\\",
        children: /*#__PURE__*/_jsxDEV(\\"span\\", {
          children: \\"Tooltip will show on mouse enter.\\"
        }, void 0, false, {
          fileName: _jsxFileName,
          lineNumber: 10,
          columnNumber: 9
        }, this)
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 9,
        columnNumber: 7
      }, this)]
    }, void 0, true, {
      fileName: _jsxFileName,
      lineNumber: 5,
      columnNumber: 5
    }, this);
  }
  _c = App;
  export default App;"
`;

exports[`play with resolver 1`] = `
"import { A as _unplugin_react_A_0 } from 'D:/Dev/unplugin/unplugin-react-components/test/fixtures/A.tsx'
import { Progress as _unplugin_react_Progress_1 } from 'antd'
import { Tooltip as _unplugin_react_Tooltip_2 } from 'antd'

  import { jsxDEV as _jsxDEV } from \\"react/jsx-dev-runtime\\";
  function App() {
    return /*#__PURE__*/_jsxDEV(\\"div\\", {
      className: \\"App\\",
      children: [/*#__PURE__*/_jsxDEV(_unplugin_react_A_0, {
        variant: 'contained',
        children: \\"hi mui\\"
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 6,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_Progress_1, {
        percent: 30
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 7,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_A_0, {}, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 8,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_Tooltip_2, {
        title: \\"prompt text\\",
        children: /*#__PURE__*/_jsxDEV(\\"span\\", {
          children: \\"Tooltip will show on mouse enter.\\"
        }, void 0, false, {
          fileName: _jsxFileName,
          lineNumber: 10,
          columnNumber: 9
        }, this)
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 9,
        columnNumber: 7
      }, this)]
    }, void 0, true, {
      fileName: _jsxFileName,
      lineNumber: 5,
      columnNumber: 5
    }, this);
  }
  _c = App;
  export default App;"
`;
